tests/success/00-basics/WildcardDefinition.vix
test : int
_ = printInt 123

