tests/syntax-error/DuplicateDefinition.vix
test = 123
test = 123
